# rag-trainer

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
src/rag_sqlite/core/: config.py  database.py  embeddings.py
src/rag_sqlite/dashboard/: app.py
src/rag_sqlite/dashboard/pages/: chat_test.py  chunks.py  conversation.py  logs.py  metrics.py  ollama_status.py  overview.py  ratings.py  settings.py  tables.py
src/rag_sqlite/pipeline/: audio.py  image.py  ingest.py  pdf.py  storage.py
src/rag_sqlite/rag/: engine.py  generator.py  intent.py  prompt_builder.py  retrieval.py
src/rag_sqlite/tg/: bot.py  flows.py  helpers.py
src/rag_sqlite/tg/handlers/: __init__.py  callbacks.py  corrections.py  media.py  ratings.py  router.py  text.py
src/rag_sqlite/utils/: chunker.py
tests/: test_dashboard_import.py  test_database.py  test_end_to_end.py  test_fixes.py  test_helpers.py  test_rag_engine.py  test_telegram_import.py
